Fix Convert with Dtos